--- a/sidebar-card.yaml
+++ b/sidebar-card.yaml
@@ -1,122 +1,6 @@
+# This is my working card in the sidebar.
+
 sidebar:
-  title: ''
-  hideTopMenu: false
-  hideHassSidebar: true
-  updateMenu: true
-  showTopMenuOnMobile: true
-  digitalClock: true
-  twelveHourVersion: true
-  period: false
-  date: true
-  dateFormat: dddd, MMMM D
-  width:
-    mobile: 22
-    tablet: 22
-    desktop: 20
-  style: |
-    :host {
-      --sidebar-background: #1c1c1e;
-      --sidebar-text-color: #ffffff;
-    }
-
-    .main {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-    }
-
-    /* BIG clock */
-    .digitalClock {
-      display: flex;
-      justify-content: center;
-      align-items: baseline;
-      font-family: -apple-system, BlinkMacSystemFont, "San Francisco", "Segoe UI", Roboto, sans-serif;
-      font-weight: 300;
-      font-size: 8.5em !important;
-      color: #ffffff;
-      line-height: 1.1;
-      white-space: nowrap;
-      margin-top: 1.5rem
-    }
-
-    /* Bigger date */
-    .date {
-      text-align: center;
-      font-weight: 400;
-      font-size: 1.6em !important;
-      color: #e0e0e0;
-      margin-bottom: 3rem;
-      font-family: -apple-system, BlinkMacSystemFont, "San Francisco", "Segoe UI", Roboto, sans-serif;
-    }
-
-    /* BIG sidebar menu items */
-    .sidebarMenu {
-      flex-grow: 1;
-      overflow-y: auto;
-      padding: 0;
-      margin: 0;
-    }
-
-    .sidebarMenu li {
-      font-size: 2.6rem !important;
-      line-height: 1.1 !important;
-      padding: 0.9rem 1.4rem !important;
-      border-bottom: none !important;
-      display: flex !important;
-      align-items: center !important;
-    }
-
-    .sidebarMenu li:not(:last-child) {
-      margin-bottom: 0.2rem !important;
-    }
-
-    .sidebarMenu li span,
-    .sidebarMenu li a {
-      font-size: inherit !important;
-      flex: 1 1 auto;
-    }
-
-    .sidebarMenu li.active {
-      background-color: #2c2c2e !important;
-      font-weight: bold !important;
-    }
-
-    ul {
-      border: none !important;
-      margin: 0 !important;
-      padding: 0 !important;
-    }
-
-    .sidebarMenu li ha-icon {
-      --mdc-icon-size: 2.6rem !important;
-      margin-left: auto !important;
-      transform: translateY(-2px);
-    }
-  sidebarMenu:
-    - action: navigate
-      navigation_path: /dashboard-new/home
-      name: Home
-      icon: mdi:home
-    - action: navigate
-      navigation_path: /dashboard-new/lights
-      name: Lights
-      icon: mdi:lightbulb
-    - action: navigate
-      navigation_path: /dashboard-new/calendar
-      name: Calendar
-      icon: mdi:calendar
-    - action: navigate
-      navigation_path: /dashboard-new/climate
-      name: Climate
-      icon: mdi:thermometer
-    - action: navigate
-      navigation_path: /dashboard-new/vacuum
-      name: Vacuum
-      icon: mdi:robot-vacuum
-    - action: navigate
-      navigation_path: /dashboard-new/cameras
-      name: Cameras
-      icon: mdi:cctv
   bottomCard:
     type: custom:now-playing-sidebar-card
     cardStyle: |
@@ -132,3 +16,7 @@ sidebar:
       height: 215
       radius: 14
       hide_youtube_cast_art: true
+      marquee_title: true
+      show_progress: true
+      show_controls: false
+      hide_when_no_art: true
